# h2datatype

./: Cargo.toml  README.md  TODO.md
hooks/pre-commit.d/: update-readme-md.sh
src/: alignment.rs  h2type.rs  h2types.rs  h2typetrait.rs  lib.rs  offset.rs  resolve_offset.rs  resolved_type.rs
src/basic_type/: ascii.rs  character.rs  h2number.rs  h2pointer.rs  ipv4.rs  ipv6.rs  mod.rs  unicode.rs  utf16.rs  utf32.rs  utf8.rs
src/complex_type/: h2array.rs  h2enum.rs  h2struct.rs  mod.rs
src/complex_type/strings/: h2string.rs  lpstring.rs  lstring.rs  mod.rs  ntstring.rs
src/composite/: h2array.rs  h2enum.rs  h2struct.rs
src/composite/string/: h2string.rs  lpstring.rs  ntstring.rs
src/composite/strings/: h2string.rs  lpstring.rs  ntstring.rs
src/dynamic_type/: ntstring.rs
src/simple/: h2number.rs  h2pointer.rs  mod.rs
src/simple/character/: ascii.rs  utf16.rs  utf32.rs  utf8.rs
src/simple/network/: ipv4.rs  ipv6.rs  mac_address.rs  mac_address8.rs  mod.rs
src/strings/: h2string.rs  lpstring.rs  lstring.rs  mod.rs  ntstring.rs
